# Lab-Project-FreeRTOS-LoRaWAN

./: .gitmodules  CMakeLists.txt  FreeRTOS-LoRaMac-node-v4_4_4.patch  README.md  THIRD-PARTY-LICENSES.txt  main.c
.github/: SECURITY.md
boards/Nordic_NRF52/: pinName-board.h  pinName-ioe.h  rtc-board.c
boards/STM32L475_Discovery/: gpio-board.c  rtc-board.c  sx1276mb1las-board.c
boards/STM32L475_Discovery/common_io/: iot_i2c.c
class_a/: README.md  main.c
demos/classA/Nordic_NRF52/: LoRaWAN.c  LoRaWAN.h  THIRD-PARTY-LICENSES-demo.txt  classa_demo.emProject  classa_demo.emSession  classa_task.c  credentials.c  main.c
demos/classA/Nordic_NRF52/board/: SEGGER_THUMB_Startup.s  board_init.c  board_init.h  start.c
demos/classA/Nordic_NRF52/config/: FreeRTOSConfig.h  LoRaWANConfig.h  board-config.h
demos/classA/STM32L475_Discovery/: .cproject  .project  LinkerScript.ld  main.c
demos/classA/STM32L475_Discovery/board/: board_init.c  board_init.h  entropy_hardware_poll.c  flash_l4.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
demos/classA/STM32L475_Discovery/config/: LoRaWANConfig.h  board-config.h  iot_config_common.h
demos/classA/common/: LoRaWAN.c  classa_task.c
demos/classA/common/include/: LoRaWAN.h
demos/classA/include/: classA.h
freertos-osal/: board.c  delay.c  spi.c
freertos_osal/: board.c  board.h  gpio.c  spi.c  timer.c
mcu/nordic_nrf52/: README.md
mcu/nordic_nrf52/board/: board.c  gpio-board.c  pinName-board.h  rtc-board.c  sx1262mbxcas-board.c
mcu/nordic_nrf52/boot/: start.c
mcu/nordic_nrf52/config_files/: board-config.h  iot_gpio_config.h  sdk_config.h
projects/nordic_nrf52/: SEGGER_Flash.icf  SEGGER_HardFaultHandler.c  lorawan_demo.emProject  lorawan_demo.emSession  main.c  start.c
